--- a/nginx/sites-available/price-tracker.conf
+++ b/nginx/sites-available/price-tracker.conf
@@ -38,6 +38,11 @@ server {
         alias /usr/share/nginx/html/price-tracker/static/;
         index service.html;
     }
+
+    location /google5165bfa9a0714f0f/ {
+        root /usr/share/nginx/html/price-tracker/
+        index google5165bfa9a0714f0f.html;
+    }
 }
 
 server {
