--- a/nginx/sites-enabled/price-tracker.conf
+++ b/nginx/sites-enabled/price-tracker.conf
@@ -39,6 +39,11 @@ server {
         alias /usr/share/nginx/html/price-tracker/static/;
         index service.html;
     }
+
+    location /googleb4370e9bcc31fe47.html {
+        root /usr/share/nginx/html/price-tracker/;
+        index googleb4370e9bcc31fe47.html;
+    }
 }
 
 server {
