--- a/nginx/sites-enabled/price-tracker.conf
+++ b/nginx/sites-enabled/price-tracker.conf
@@ -12,7 +12,7 @@ server {
 	
 	error_log	/var/log/nginx/price-tracker-error.log;
 	access_log	/var/log/nginx/price-tracker-access.log;
-	
+
     location / {
         resolver 127.0.0.11 valid=30s;
         set $upstream_price_tracker price_tracker:8080;
@@ -43,6 +43,30 @@ server {
     location /googleb4370e9bcc31fe47.html {
         root /usr/share/nginx/html/price-tracker/;
         index googleb4370e9bcc31fe47.html;
+    }
+
+    location /yandex_e99ce6731b20252b.html {
+        root /usr/share/nginx/html/price-tracker/;
+        index yandex_e99ce6731b20252b.html;
+    }
+
+    #location /sitemap.xml {
+    #    root /usr/share/nginx/html/price-tracker/;
+    #    index sitemap.xml;
+    #}
+
+    #location /sitemap.xml {
+    #    alias /usr/share/nginx/html/price-tracker/;
+    #    add_header Content-disposition "attachment";
+    #    try_files $uri /sitemap.xml;
+        #root /usr/share/nginx/html/price-tracker/;        
+    #}
+
+    location /sitemap.xml {
+        alias /usr/share/nginx/html/price-tracker/sitemap.xml;
+        add_header Content-Disposition "attachment; filename=sitemap.xml";
+        add_header Content-Type application/octet-stream;
+        add_header Content-Length $content_length;
     }
 }
 
